Fix issue #94: Leading space on {template} tag

--- a/src/eclipse/net.vtst.ow.eclipse.soy/src/net/vtst/ow/eclipse/soy/SoyMessages.properties
+++ b/src/eclipse/net.vtst.ow.eclipse.soy/src/net/vtst/ow/eclipse/soy/SoyMessages.properties
@@ -31,3 +31,4 @@ function_call_arguments = The function '%s' expects %d argument(s).
 function_call_arguments_opt = The function '%s' expects from %d to %d argument(s).
 illegal_command_attribute = Illegal command attribute value.
 undefined_variable = Undefined variable.
+keyword_must_be_after_newline = Opening and closing of template commands must appear at the beginning of a line.
