Issue #98: Options for large projects.

--- a/src/eclipse/net.vtst.ow.eclipse.js.closure/src/net/vtst/ow/eclipse/js/closure/OwJsClosureMessages.properties
+++ b/src/eclipse/net.vtst.ow.eclipse.js.closure/src/net/vtst/ow/eclipse/js/closure/OwJsClosureMessages.properties
@@ -115,6 +115,8 @@ ClosurePreferencePage_cacheLibraryDepsFiles_READ_ONLY = Read-only
 ClosurePreferencePage_cacheLibraryDepsFiles_READ_AND_WRITE = Enabled
 ClosurePreferencePage_otherOptionsGroup = Other options:
 ClosurePreferencePage_stripProjectFiles = Strip files included from workspace projects
+ClosurePreferencePage_doNotKeepCompilationResultsOfClosedFilesInMemory = Do not keep compilation results of closed files in memory 
+ClosurePreferencePage_doNotCompileClosedFiles = Do not compile closed files
 
 # ClosureAdditionalProposalInfo
 jsdoc_type = Type:
