add support for the following syntax constructs: - @import-once - @{var} selectors - & directly after an arbitrary selector (ident, class, hash, variable) - string interpolation ~"someText@{variable_name}someOtherText" - interpolated strings as selecotrs (~".my-class-@{my_var}") { <rules> } - top level mixin calls

--- a/src/eclipse/net.vtst.ow.eclipse.less.ui/src/net/vtst/ow/eclipse/less/ui/LessUiMessages.properties
+++ b/src/eclipse/net.vtst.ow.eclipse.less.ui/src/net/vtst/ow/eclipse/less/ui/LessUiMessages.properties
@@ -10,6 +10,8 @@ highlighting__COMMENT = Comment
 highlighting__DEFAULT = Default
 highlighting__PROPERTY = Property name
 highlighting__SELECTOR = Selector
+highlighting__AMPERSAND = & selector modifier
+highlighting__DEPRECATED_SELECTOR_INTERPOLATION = Selector interpolation (deprecated)
 highlighting__STRING = String
 highlighting__VARIABLE_DEFINITION = Variable definition
 highlighting__VARIABLE_USE = Variable use
